Fixed email form overflow

--- a/src/scss/Email_form.scss
+++ b/src/scss/Email_form.scss
@@ -1,9 +1,11 @@
 .email-form {
+    background-color: red;
+    padding: 0;
     input[type="email"]{
         width: 28vw;
-        min-width: 300px;
+        max-width: 500px;
+        min-width: 250px;
         height: 2.8em;
-        margin-right: 2em;
         border-radius: 2em;
     }
 
