--- a/src/scss/Intro.scss
+++ b/src/scss/Intro.scss
@@ -1,5 +1,6 @@
 .intro {
     min-height: 100vh;
+    background-color: red;
 }
 
 .intro h2 {
@@ -8,6 +9,7 @@
 }
 
 .intro__slide {
+    width: 100%;
     height: 100vh;
     padding-left: 27%;
     position: relative;
@@ -17,6 +19,7 @@
 
     .slide__content-container {
         width: 320px;
+        max-width: 100vw;
         margin-top: -70px;
 
         * {
