--- a/src/scss/Slider.scss
+++ b/src/scss/Slider.scss
@@ -38,6 +38,7 @@
 
 
     hr {
+        display: none;
         border-color: #5A5A5A5A;
         border: 1px solid rgb(128, 128, 128);
 
