--- a/src/scss/Subscribe.scss
+++ b/src/scss/Subscribe.scss
@@ -1,4 +1,5 @@
 .subscribe-section {
+    max-width: 100%;
     min-height: 350px;
     padding: 2em;
     background-image: url("../../public/files/images/map_dot.png");
@@ -7,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    // display: none;
     .subscribe-section__inner {
         text-align: center;
     
